fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ a:hover{
 }
 .header__image{
     float:right;
-    margin-right: 5%;
+    margin-right: 2.5%;
     margin-left: 2.5%;
     padding: 30px 0 30px 0;
     width: 42.5%;
